[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/WorldMap/WorldMap.gd" type="Script" id=1]
[ext_resource path="res://Scenes/WorldMap/BiomeMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WorldMap/ResourceMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/WorldMap/CursorHighlight.gd" type="Script" id=4]

[node name="WorldMapTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BiomeMap" parent="." instance=ExtResource( 2 )]

[node name="ResourceMap" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CursorHighlight" type="Sprite" parent="."]
visible = false
script = ExtResource( 4 )
